Tablet: add z-index; fix size & pos for #cup;

--- a/03 Responsive/homework/YuBil/02/css/tablet.css
+++ b/03 Responsive/homework/YuBil/02/css/tablet.css
@@ -14,36 +14,17 @@
     margin: 0;
 }
  
-body { 
+/* body { 
     background-image: url("../tablet.png");
     background-repeat: no-repeat;
     opacity: .3;    
-} 
+}  */
 
 #price,
 #smile1,
 #share-btn,
 .escape,
 header > nav { display: none; }
-
-#smile2,
-#cup,
-#popcorn {
-    position: absolute;
-    width: 110px;
-    height: 110px;
-}
-
-#smile2 img { 
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-}
-
-#smile2 {
-    right: 58px;
-    bottom: -145px;
-}
 
 h1, 
 h2, 
@@ -116,12 +97,52 @@ main .afterSloganInfo {
     line-height: 32.5px;  
 }
 
+#smile2 {
+    position: absolute;
+    z-index: 2;
+    width: 110px;
+    height: 110px;
+    right: 58px;
+    bottom: -145px;
+}
+
+#smile2 img { 
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+}
+
+footer { 
+    position: relative;
+    z-index: 1;
+    background-image: url("../img/bg-green.jpg");
+    background-size: cover;
+    padding-top: 61px;
+    padding-bottom: 35px;
+    color: #fff;
+}
+
 footer .footerSlogan {
     font-family: 'Intro', Arial, sans-serif;
     font-size: 21px;
     text-transform: uppercase;
     letter-spacing: 2px;
     line-height: 35px;
+}
+
+#cup {
+    position: absolute;
+    width: 250px;
+    height: 310px;
+    left:   -58px;
+    top:    250px;
+    z-index: 2;
+}
+
+#popcorn {
+    position: absolute;
+    width: 110px;
+    height: 245px;
 }
 
 /* Buttons */
@@ -147,24 +168,17 @@ button.main-btn {
 
 button.footer-btn { background-color: #FF634E; }
 /* END Buttons */
-
-footer { 
-    background-image: url("../img/bg-green.jpg");
-    background-size: cover;
-    padding-top: 61px;
-    padding-bottom: 35px;
-    color: #fff;
-}
-        
+    
 /* Video styling */
 .video-wrapper {
     margin-top: 47px;
     margin-bottom: 62px;
-    padding: 0 26px;
+    padding: 20px 120px;
 }
 
 figure {
     position: relative;
+    z-index: 3;
     padding-bottom: 56.25%; /* 16:9 */
     width: 100%;
     height: 0;
